# DSA_Project

./: CMakeLists.txt  README.md
CLI_Mode/Graphviz/lib/: cdt.lib  cgraph++.lib  cgraph.lib  gdtclft.lib  gvc++.lib  gvc.lib  gvplugin_core.lib  gvplugin_dot_layout.lib  gvplugin_gd.lib  gvplugin_gdiplus.lib  gvplugin_kitty.lib  gvplugin_neato_layout.lib  gvplugin_pango.lib  gvplugin_vt.lib  gvplugin_webp.lib  gvpr.lib  pathplan.lib  xdot.lib  (+2 more)
CLI_Mode/outputfiles/: decompressed_file.xml  formatted.xml  mini.xml  out.comp  report.txt
GUI/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
GUI/src_code/: CLI.cpp  CLI.h  CMakeLists.txt  CheckXmlFile.cpp  CheckXmlFile.h  CompressingXMLFile.cpp  DecompressingXML.h  DecompressingXMLFile.cpp  MinifyingXMLFile.cpp  MinifyingXMLFile.h  NetworkAnalysis.cpp  NetworkAnalysis.h  NetworkBuilder.cpp  Network_JPG.cpp  Network_JPG.h  PostSearch.cpp  PrettifyingXMLFie.cpp  PrettifyingXMLFile.h  XMLtoJSON.cpp  XMLtoJSON.h  XMLtoTree.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
XMLfiles/: compresed_file.xml
input/: sample.xml
inputXMLfiles/: sample.xml
outputfiles/: compresed_file.comp  out.comp  output.json  prettified.xml
src/code/: CLI.cpp  CheckXmlFile.cpp  CompressingXMLFile.cpp  DecompressingXMLFile.cpp  PrettifyingXMLFie.cpp  PrettifyingXMLFile.cpp  XMLtoTree.cpp  compresed_file.xml  files.txt  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  PreviewWindow.cpp  PreviewWindow.h
src/header/: CheckXmlFile.h  CompressingXML.h  DecompressingXML.h  XMLtoTree.h
(+660 files in other folders)
